# R3-backend

./: .dockerignore  .gitignore  .gitignore.txt  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4e2e0225cb77_create_users_table.py
app/: main.py
app/api/v1/: login.py
app/core/: similarity.py
app/crud/: course_attempt.py  run.py  user.py
app/db/: session.py
app/models/: user.py
app/schemas/: __init__.py  run.py  token.py  user.py
backend/: .env  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0951308fefa0_add_rally_points_to_courses.py  0b1208b1442a_add_height_and_weight_to_user_model.py  0cfaccd878aa_create_initial_database_schema.py  10dd7753a1f2_create_initial_database_schema.py  6753befa1464_add_albums_table.py  67d22b248463_add_end_at_to_run_model.py  6c6a29376fbd_add_chart_data_to_run_model.py  83bee2293f3f_create_initial_database_schema_from_.py  892b299b5547_merge_migration_branches.py  9446af16ff9b_sync_courses_columns.py  9d36035bb1d5_create_courses_and_course_attempts.py  b2b1162446d9_add_social_id_to_user_and_make_email_.py  c3a52b72ead1_add_community_features_tables.py  d8c661aa71d8_expand_run_model_with_detailed_stats.py  e876417cb340_create_initial_database_schema.py  ebc3a0c822ec_add_posts_and_comments_tables.py  fb173b674689_community_tables.py
backend/app/: main.py
backend/app/api/: deps.py
mobile/: pubspec.yaml
mobile/lib/: home_screen.dart  login_screen.dart  main.dart  main_screen.dart  splash_screen.dart
webapp/: tsconfig.json
(+83 files in other folders)
